--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>😎 Sai's Personal Website</title>
+    <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
     <table cellspacing="20px">
@@ -19,7 +20,7 @@
         </tr>
     </table>
     
-    <hr size=3px noshade>
+    <hr>
     <h3>Education</h3>
     <ul>
         <li>Mothers Model School</li>
@@ -27,18 +28,18 @@
         <li>FIITJEE world school</li>
         <li>Vellore Institute of Technology</li>
     </ul>
-    <hr size="3px" noshade>
+    <hr>
     <h3>My Hobbies</h3>
-    <ol type="i" start="4">
+    <ol type="i">
         <li><a href="https://www5.gogoanimehub.tv/">Watching anime</a></li>
         <li>Chatting with Best friends</li>
         <li>Talking about Philosophical stuff</li>
         <li>Swimming, singing, dancing etc......</li>
     </ol>
     <a href="mycontacts.html">My Contact Details</a>
-    <hr size="3px" noshade>
+    <hr>
     <h3>Achievements</h3>
-    <table border="1px" bgcolor="yellow">
+    <table class="certificate">
         <thead>
             <th>Years</th>
             <th>Certificates</th>
@@ -62,14 +63,14 @@
             <td>Vellore Instititute of Technology</td>
         </tfoot>
     </table>
-    <hr size="3px" noshade>
+    <hr>
 
 
     <h3>Skill Set</h3>
-    <table border="2px">
+    <table class="skills">
         <tr>
             <td>
-                <table cellspacing="20px">
+                <table cellspacing=20px>
                     <tr>
                         <td>Painting and Drawing</td>
                         <td>⭐⭐⭐⭐⭐</td>
